--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,10 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    height: 100vh;
+    overflow: hidden;
+    background: linear-gradient(135deg, rgba(101, 90, 135) 0%, rgba(254, 238, 127) 35%, rgba(223, 209, 46) 100%);
+    min-width: 320px;
+    margin: 0;
+    padding: 0;
+    font-family: Inter, sans-serif;
+    position: relative;
 }
